# Wargame_MCP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  HowToUse.md  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: PRD.md
examples/sample_docs/: baltic_shield_lessons.md  baltic_shield_lessons.md.meta.yml  nato_urban_ops.md  nato_urban_ops.md.meta.yml
src/wargame_mcp/: __init__.py  _rich_compat.py  _structlog_fallback.py  agent.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  ingest.py  instrumentation.py  mcp_tools.py  mem0_client.py  mem0_server.py  memory_tools.py  metadata_loader.py  server.py  vectorstore.py
src/wargame_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_additional_coverage.py  test_agent_e2e.py  test_coverage_boost.py  test_final_push.py  test_last_effort.py  test_mcp_tools.py  test_mcp_tools_unit.py  test_memory_tools.py  test_push_to_70.py  test_simple_units.py  test_vectorstore_unit.py
