[project]
name = "wargame-mcp"
version = "0.1.0"
description = "Reference implementation for the Wargame Knowledge & Memory System tooling."
authors = [{name = "Wargame Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "tiktoken>=0.7.0",
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
wargame-mcp = "wargame_mcp.cli:app"
wargame-rag-mcp = "wargame_mcp.server:run"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
